maze.lessons.maze.island.IslandMaze.scala.error
Escaper:35: error: value South is not a member of object plm.universe.Direction
    if (getDirection==Direction.South) {
                                ^