maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  var r = 0
  while ((getX()!=0)||(getX()!=6)) {
    
    avN()
    }
  run1()
}

def run1() {
  while (!(estSurBiscuit)) {
    keepHandOnSideWall()
    avance1()
  }
  prendBiscuit()
}

def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()) {
   droite()
  }
}

def avance1() {
  if (estFaceMur()) {
    droite()
    
  } else {avance()}
}

def avN() {
  while (estFaceMur!=true) {
    if (getDirection==Direction.South) {
        
    }
    avance()
  } 
  gauche()
  if (estFaceMur()) {
    retourne()
    }
}